<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱订车</string>
    <string name="user_name_hint">请输入您的电子邮箱或手机号码</string>
    <string name="user_password_hint">请输入登录密码</string>
    <string name="login_password_hint">请再次输入登录密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="again_new_password_hint">请再次输入新密码</string>
    <string name="find_password">找回密码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="invite_no_hint">请输入邀请码</string>
    <string name="my_invite_no">邀请亲友</string>
    <string name="change_verification_code">点击更换</string>
    <string name="sms_verification_code">短信验证码</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="logining">正在登录...</string>
    <string name="login_success">登录成功！</string>
    <string name="login_fail">登录失败！</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>
    <string name="registering">正在注册...</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败！</string>
    <string name="account_nonactivated">邮件未激活</string>
    <string name="confirm">确定</string>
    <string name="confirm_cancel">确定取消？</string>
    <string name="cancel">取消</string>
    <string name="email_hint">请输入您的电子邮箱地址</string>
    <string name="phone_hint">请输入您的手机号码</string>
    <string name="name_hint">请输入您的姓名</string>
    <string name="account_management">账户管理</string>
    <string name="modify_password">修改登录密码</string>
    <string name="modify_account_info">修改账户信息</string>
    <string name="modify_phone_number">修改手机号码</string>
    <string name="modify_fail">修改失败！</string>
    <string name="modify_success">修改成功</string>
    <string name="rent_success">订车成功，订单已生成！</string>
    <string name="my_order">我的订单</string>
    <string name="rent_car">租赁车</string>
    <string name="search_from_start">输入乘车地点或长按地图选择</string>
    <string name="search_from_end">输入下车地点或长按地图选择</string>
    <string name="pick_me_up">到这里来接我</string>
    <string name="from_to">我要去这里</string>
    <string name="start_place">乘车地点</string>
    <string name="end_place">下车地点</string>
    <string name="get_on_car_time">预约乘车时间</string>
    <string name="my_place">我的位置(仅供参考)</string>
    <string name="no_my_location">无法确定您的位置</string>
    <string name="chose_city">请选择您所在的城市</string>
    <string name="unkown">未知</string>
    <string name="input_search_address">请输入搜索地址</string>
    <string name="chose_or_search_start_place">选择或搜索乘车地点</string>
    <string name="chose_or_search_end_place">选择或搜索下车地点</string>
    <string name="traffic">路况</string>
    <string name="searching">搜索中...</string>
    <string name="network_error">网络连接错误！</string>
    <string name="setup_start_place">设置乘车地点</string>
    <string name="setup_end_place">设置下车地点</string>
    <string name="chose_end_place">请选择下车地点</string>
    <string name="setup_riding_time">设置乘车时间</string>
    <string name="chose_start_place">请选择乘车地点</string>
    <string name="not_find_place">未找到相关地点</string>
    <string name="confirm_my_start_place_message">确认在您当前所处的位置上车？</string>
    <string name="confirm_chose_start_place_message">确认在您选择的位置上车？</string>
    <string name="confirm_chose_end_place_message">确认在您选择的位置下车？</string>
    <string name="confirm_reset_place_message">确认要重新设置用车地点？</string>
    <string name="confirm_retry">确定重试？</string>
    <string name="call_service_message">您是否拨打客服电话？</string>
    <string name="call_driver_message">您是否拨打司机电话\n%1$s？</string>
    <string name="reset_place_title">重新设置用车地点</string>
    <string name="reset_place">重设\n地点</string>
    <string name="planning_route">规划线路</string>
    <string name="predict_mileage">预计里程</string>
    <string name="consume_time">预计行驶时长</string>
    <string name="km">公里</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="exit_app">退出应用</string>
    <string name="confirm_exit">确认退出？</string>
    <string name="meet_me">立即来接我</string>
    <string name="book_rent_time">预订乘车时间</string>
    <string name="book_riding_time_error">预约订车必须提前1小时</string>
    <string name="book_riding_date_error">预约订车日期不能小于当前日期</string>
    <string name="next">下一步</string>
    <string name="now">即时</string>
    <string name="reset">重设</string>
    <string name="reset_time">修改乘车时间</string>
    <string name="confirm_rent_info">确认订车信息</string>
    <string name="chose_car_type">选择车辆类型</string>
    <string name="car_type">车辆型号</string>
    <string name="car_license">车辆牌照</string>
    <string name="order_info">订单详情</string>
    <string name="route_check">行程查看</string>
    <string name="unsubscribe">退订</string>
    <string name="unsubscribe_fail">退订失败！</string>
    <string name="unsubscribe_success">退订成功</string>
    <string name="common_address">常用地址</string>
    <string name="history_address">历史地址</string>
    <string name="delete_address">删除地址</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="loading">正在加载数据...</string>
    <string name="loading_fail">加载数据失败！</string>
    <string name="updating">正在更新...</string>
    <string name="no_service_area_start">您选择的乘车地点不在现有服务区内，现有服务区(%1$s)已用蓝框标明</string>
    <string name="no_service_area_end">您选择的下车地点不在现有服务区内，现有服务区(%1$s)已用红框标明</string>
    <string name="enable">启用</string>
    <string name="customer_service">联系客服</string>
    <string name="driver">司机</string>
    <string name="driver_name">司机姓名</string>
    <string name="driver_id">司机编号</string>
    <string name="driver_grade">司机星级：</string>
    <string name="install_google_voice_prompt">无法使用语音输入，请下载安装Google Voice</string>
    <string name="from_prompt">到哪来接您？</string>
    <string name="to_prompt">您要到哪去？</string>
    <string name="voice_chose_prompt">您说的是：</string>
    <string name="car_arrive">车辆已到达</string>
    <string name="running">正在运行</string>
    <string name="unreview">待评价</string>
    <string name="rent_car_status">订单状态</string>
    <string name="order_car_time">订车时间</string>
    <string name="add_review">我要评价</string>
    <string name="review">我的评价</string>
    <string name="rent_cost">用车费用</string>
    <string name="rent_mileage">用车里程</string>
    <string name="arrived_time">到达时间</string>
    <string name="yuan">元</string>
    <string name="submit">提交</string>
    <string name="wait_execute">待服务</string>
    <string name="in_service">服务中</string>
    <string name="finished">已完成</string>
    <string name="my_grade">我的评分：</string>
    <string name="canceled">已取消</string>
    <string name="modify_order">修改订单</string>
    <string name="fastest_arrive_time">预计最近的车辆到达需要%1$s分钟</string>
    <string name="estimate_arrive_time">预计车辆到达需要%1$s分钟</string>
    <string name="server_busy">服务器忙</string>
    <string name="submit_order">提交订单</string>
    <string name="want_rent_car">我要订车</string>
    <string name="waitting">请稍候...</string>
    <string name="order_id">订单号</string>
    <string name="request_success">请求成功！</string>
    <string name="request_fail">请求失败！</string>
    <string name="wait_execute_order_remind">您有%1$s个订单待服务</string>
    <string name="recharge">充值</string>
    <string name="relogin_message">请重新登录</string>
    <string name="chose_payment_type">选择付款方式</string>
    <string name="cash_pay">现金支付</string>
    <string name="credit_card_pay">银行卡支付</string>
    <string name="pay">支付</string>
    <string name="wait_pay">等待付款</string>
    <string name="pay_type">支付方式</string>
    <string name="paied">已付款</string>
    <string name="refund">已退款</string>
    <string name="arrearage">未付款</string>
    <string name="my_points">我的积分</string>
    <string name="my_coupons">我的优惠券</string>
    <string name="marketing_campaign">缤纷活动</string>
    <string name="get_coupons">领取优惠券</string>
    <string name="not_use">未使用</string>
    <string name="used">已使用</string>
    <string name="expired">已过期</string>
    <string name="transfer_coupons">转让优惠券</string>
    <string name="input_others_phone">请输入对方的手机号码</string>
    <string name="contacts">联系人</string>
    <string name="transfer">转让</string>
    <string name="invite_friend_join">邀请亲友加入</string>
    <string name="send_invite">发送邀请短信</string>
    <string name="use_coupons">使用优惠券</string>
    <string name="point_exchange_coupons">积分换券</string>
    <string name="current_point">您当前的积分：</string>
    <string name="now_campaign">当前活动</string>
    <string name="expired_campaign">往期活动</string>
    <string name="advance_campaign">预告活动</string>
    <string name="click_get_address">点击获取详细地址</string>
    <string name="f_and_q">常见问题</string>

</resources>