<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <Button
        android:id="@id/alert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/arrow_item_rounded"
        android:text="@string/loading"
        android:textColor="@color/dark"
        android:textSize="17.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical" >

        <Button
            android:id="@id/my_orders"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/arrow_btn"
            android:text="@string/my_order"
            android:textColor="@color/dark"
            android:textSize="17.0sp" />

        <Button
            android:id="@id/rent_car"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/arrow_btn"
            android:text="@string/want_rent_car"
            android:textColor="@color/dark"
            android:textSize="17.0sp" />
    </LinearLayout>

    <com.quickride.customer.trans.view.MenuButton
        android:id="@id/menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>