<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@id/service_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"
        android:textColor="@color/dark"
        android:textSize="18sp" />

    <Button
        android:id="@id/meet_me"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/arrow_btn"
        android:text="@string/meet_me"
        android:textColor="@color/dark"
        android:textSize="17.0sp" />

    <Button
        android:id="@id/order_car_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/arrow_btn"
        android:text="@string/book_rent_time"
        android:textColor="@color/dark"
        android:textSize="17.0sp" />

    <LinearLayout
        android:id="@id/rootLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:gravity="center"
            android:textColor="@color/dark"
            android:textSize="17.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:orientation="horizontal" >

            <Button
                android:id="@id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_time" />

            <Button
                android:id="@id/confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>