<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@id/rent_cost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/item_up_f"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <TextView
        android:id="@id/order_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_down_f"
        android:gravity="center"
        android:textColor="@color/dark"
        android:textSize="16sp" />

    <CheckBox
        android:id="@id/invoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:checked="false"
        android:text="在下车时索要发票"
        android:textColor="@color/dark"
        android:textSize="18.0sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:stretchColumns="*" >

        <TableRow android:layout_weight="1.0" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="15dip"
                    android:text="@string/chose_payment_type"
                    android:textColor="@color/dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@id/content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@id/pay_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rounded_corner"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@id/credit_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dip"
                        android:layout_marginTop="3dip"
                        android:checked="true"
                        android:text="@string/credit_card_pay"
                        android:textColor="@color/dark"
                        android:textSize="17.0sp" />

                    <RadioButton
                        android:id="@id/cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dip"
                        android:layout_marginTop="3dip"
                        android:text="@string/cash_pay"
                        android:textColor="@color/dark"
                        android:textSize="17.0sp" />
                </RadioGroup>

                <TextView
                    android:id="@id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@id/use_coupons"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:checked="false"
                    android:text="@string/use_coupons"
                    android:textColor="@color/dark"
                    android:textSize="18.0sp" />

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <RadioGroup
                        android:id="@id/coupons_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="invisible" />
                </ScrollView>
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:layout_weight="1.0"
                android:orientation="horizontal"
                android:weightSum="3" >

                <com.quickride.customer.trans.view.UnsubscribeButton
                    android:id="@id/unsubscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unsubscribe" />

                <Button
                    android:id="@id/pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/pay"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>