<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/rent_main_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@id/search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/searchbg" >

            <TextView
                android:id="@id/search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35.0dip"
                android:layout_marginTop="12.0dip"
                android:gravity="center_vertical"
                android:hint="@string/search_from_start"
                android:textSize="15.0sp" />
        </LinearLayout>

        <Button
            android:id="@id/city"
            android:layout_width="wrap_content"
            android:layout_height="43dip"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dip"
            android:enabled="false"
            android:text="@string/unkown" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:stretchColumns="*" >

        <TableRow android:layout_weight="1.0" >

            <com.mapabc.mapapi.map.MapView
                android:id="@id/map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:apiKey="@string/mapabc_key"
                android:clickable="true" />
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical" >

                <TextView
                    android:id="@id/arrive_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_bg"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:orientation="horizontal" >

                    <com.quickride.customer.trans.view.MenuButton
                        android:id="@id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@id/setup_ride_place"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/setup_start_place"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@id/my_location"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:padding="0dip"
                        android:src="@drawable/my_location" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>