<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@id/rent_cost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="20dip"
            android:textColor="@color/red"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20.0dip"
            android:digits="0123456789"
            android:hint="请输入信用卡卡号"
            android:inputType="phone"
            android:maxLength="16"
            android:singleLine="true" />

        <EditText
            android:id="@id/arrive_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20.0dip"
            android:digits="0123456789"
            android:hint="请输入信用卡有效期月份"
            android:inputType="phone"
            android:maxLength="2"
            android:singleLine="true" />

        <EditText
            android:id="@id/user_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20.0dip"
            android:digits="0123456789"
            android:hint="请输入信用卡背面末三位数字"
            android:inputType="phone"
            android:maxLength="3"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <EditText
                android:id="@id/verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789"
                android:hint="@string/verification_code_hint"
                android:inputType="phone"
                android:maxLength="4"
                android:singleLine="true" />

            <TextView
                android:id="@id/get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_verification_code"
                android:textColor="@color/dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="50dip"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@id/pay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>